# the-data-science-sample-python-repo

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.prototype.yml  docker-compose.yml
scripts/: init.sh  test.sh
src/: main.py  pyproject.toml
src/module/: utils.py
src/pipeline/: table.py
