[tool.poetry]
name = "project-task"
version = "0.1.0"
description = ""
authors = ["saleepeppe"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.3.0"
dagster = "^0.14.15"
pandas = "^1.4.2"
numpy = "^1.22.3"
plotly = "^5.8.0"
jsonargparse = "^4.7.3"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
mypy = "^0.950"
dagit = "^0.14.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
